<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="#000"
              android:orientation="vertical"
              tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Success"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:id="@+id/bt_main_SharedPreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:onClick="onClick"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="104dp"
            tools:layout_editor_absoluteX="-16dp"/>
    <Button
            android:id="@+id/bt_main_Inner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/InnerLogin"
            android:textColor="@color/white"
            android:onClick="onClick"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-27dp"
            tools:layout_editor_absoluteY="280dp"/>
    <Button
            android:id="@+id/bt_main_external"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ExternalLogin"
            android:textColor="@color/white"
            android:onClick="onClick"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-27dp"
            tools:layout_editor_absoluteY="280dp"/>
    <Button
            android:id="@+id/bt_main_DB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DBLogin"
            android:textColor="@color/white"
            android:onClick="onClick"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-27dp"
            tools:layout_editor_absoluteY="280dp"/>
</LinearLayout>
