<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eeeeee"
        tools:context=".loginActivity">
    <RelativeLayout
            android:id="@+id/rl_loginactivity_top"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/black" >
    </RelativeLayout>
    <LinearLayout
            android:id="@+id/ll_loginactivity_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/rl_loginactivity_top"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/tv_loginactivity_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Username"/>
            <EditText
                    android:id="@+id/et_loginactivity_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/tv_loginactivity_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Password"/>
            <EditText
                    android:id="@+id/et_loginactivity_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
        </LinearLayout>
    </LinearLayout>
    <Button
            android:id="@+id/bt_loginactivity_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_loginactivity_two"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/black"
            android:text="@string/LLogin"
            android:textColor="#fff"
            android:gravity="center"
            android:onClick="onClick"
            tools:ignore="OnClick"/>
</RelativeLayout>
